# open-fdd-afdd-stack

./: .gitignore  2_sparql_crud_and_frontend_test.py  README.md  automated_suite.py  pyproject.toml  run_overnight_bacnet.cmd
.claude/: settings.json
.github/workflows/: build-docs-pdf.yml  ci.yml  docs-pages.yml  docs-pdf.yml
dashboard/: index.html
dashboard_dash/: app.py  requirements.txt
docs/: _config.yml  bacnet_graph_context.md  cloning_and_porting.md  context_and_recordkeeping.md  deployment-azure.md  frontend.md  getting_started.md  index.md  testing_plan.md
docs/_includes/: head_custom.html
docs/howto/: cloning_and_porting.md
frontend/: .env.production  index.html  package.json  vite.config.ts
frontend/public/: staticwebapp.config.json
frontend/scripts/: inject-aad-tenant.mjs
frontend/src/: App.tsx  index.css
frontend/src/contexts/: auth-context.tsx
frontend/src/data/: brick-1.4-query-class-allowlist.ts
frontend/src/hooks/: use-energy.ts  use-faults.ts  use-sites.ts  use-websocket.ts
frontend/src/lib/: api.ts  auth.ts  crud-api.ts  utils.ts
frontend/src/types/: api.ts
openclaw/: HANDOFF_PROTOCOL.md  README.md  SKILL.md
openclaw/bench/e2e/: README.md
openclaw/references/: frontend_testing.md  generic_lan_testing.md  skill_installation.md  testing_layers.md
openclaw/scripts/: README.md  probe_openfdd_lan.ps1  probe_openfdd_lan.sh
openfdd_stack/platform/: brick_vocabulary.py  config.py  data_model_ttl.py  energy_auto_seed.py  energy_calc_library.py  energy_calc_resolver.py  energy_observed.py  energy_recompute.py  equipment_column_map.py  jobs.py  loop.py
openfdd_stack/platform/api/: analytics.py  auth_me_routes.py  auth_principal.py  bacnet.py  data_model.py  energy_calculations.py  energy_opportunities.py  energy_rates.py  equipment.py  equipment_energy_profile.py  faults.py  iqvision.py  main.py  models.py  niagara.py  points.py  sites.py
openfdd_stack/platform/drivers/: iqvision.py  niagara.py  run_bacnet_scrape.py  run_iqvision_sync.py  run_niagara_sync.py  run_rule_loop.py  run_trigger_fdd.py
openfdd_stack/platform/realtime/: __init__.py  events.py  ws.py
openfdd_stack/tests/platform/: test_brick_vocabulary.py  test_crud_api.py  test_data_model_api.py  test_data_model_ttl.py  test_energy_calc_resolver.py  test_energy_calculations_api.py  test_energy_opportunities_api.py  test_energy_phase3.py  test_energy_rates_api.py  test_equipment_column_map.py  test_equipment_energy_profile_api.py  test_mcp_rag_retrieval.py  test_rdflib_sparql_stack.py  test_rules_equipment_type_vocabulary.py
openfdd_stack/tests/platform_api/: test_bacnet_proxy_routes.py  test_http_api.py  (+4 more)
pdf/: open-fdd-automated-testing-docs.txt
reports/: morning-review-2026-03-24.md  overnight-summary-2026-03-23-evening.md  overnight-summary-2026-03-23.md  pre-overnight-readiness-2026-03-23.md
scripts/: bootstrap.sh  build_mcp_rag_index.py
stack/: Dockerfile.api  Dockerfile.bacnet_scraper  Dockerfile.fdd_loop  Dockerfile.hoststats  Dockerfile.mcp_rag  Dockerfile.weather_scraper  README.md  docker-compose.yml
stack/rules/: FanCoil_Heating_NotTracking.yaml  boiler_command_status_mismatch.yaml  boiler_hws_off_setpoint.yaml  boiler_no_load_when_running.yaml  chiller_chws_off_setpoint.yaml  chiller_command_status_mismatch.yaml  chiller_excessive_runtime.yaml  chiller_no_load_when_running.yaml  cooling_tower_cws_high_at_max_fan.yaml  cooling_tower_no_lift.yaml  fcu_coil_no_effect.yaml  fcu_cooling_not_tracking.yaml  fcu_heating_not_tracking.yaml  fcu_simultaneous_heat_cool.yaml  fcu_smoke_test_data_present.yaml  fcu_zone_setpoint_drift.yaml  pump_cmd_no_status.yaml  pump_dp_low_at_max_speed.yaml  pump_full_speed_extended.yaml  sensor_bounds.yaml
stack/sql/: 007_retention.sql  019_niagara_points.sql  020_niagara_sites.sql  021_iqvision_sites.sql  022_equipment_type_brick_14.sql  023_user_site_permissions.sql  024_site_energy_rates.sql  025_equipment_energy_profile.sql  026_energy_opportunities.sql  027_energy_opportunity_results.sql  028_default_currency_gbp.sql  029_fault_definition_calc_hints.sql
(+38 files in other folders)
