[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "openfdd-afdd-stack"
version = "0.1.0"
description = "Open-FDD AFDD platform — Docker, FastAPI, BACnet scrapers, Grafana (uses open-fdd from PyPI)"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.9"
authors = [{ name = "Michal Ciurej", email = "mike.ciurej@email.com" }]
dependencies = [
    # Pin to latest published engine on PyPI; bump lower bound after each open-fdd release.
    "open-fdd>=2.0.13",
    # Brick TTL → column_map (stack-only; not a dependency of the engine wheel).
    "rdflib>=7.5.0,<8",
    # rdflib 7.x + pyparsing 3.2+ can break SPARQL parsing; pin compatible range.
    "pyparsing>=2.1.0,<3.2",
    # Platform / API / drivers (previously pulled via removed open-fdd extras [platform], etc.).
    "pydantic>=2.4,<3",
    "pydantic-settings>=2.2,<3",
    "psycopg2-binary>=2.9.9",
    "fastapi>=0.115,<1",
    "python-multipart>=0.0.9",
    "uvicorn[standard]>=0.30",
    "httpx>=0.27",
    "requests>=2.31",
    "PyJWT>=2.8,<3",
    "argon2-cffi>=23.1",
    "docker>=7.0,<8",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "black[jupyter]",
    "pre-commit",
    "httpx",
    "aiohttp",
    "selenium>=4.0",
    "webdriver-manager>=4.0",
    "openai>=1.0",
]

[project.urls]
Homepage = "https://github.com/bbartling/open-fdd-afdd-stack"
Documentation = "https://bbartling.github.io/open-fdd-afdd-stack/"
Repository = "https://github.com/bbartling/open-fdd-afdd-stack"
Changelog = "https://github.com/bbartling/open-fdd-afdd-stack/releases"
"Engine (PyPI)" = "https://pypi.org/project/open-fdd/"
"Engine documentation" = "https://bbartling.github.io/open-fdd/"

[tool.setuptools.packages.find]
include = ["openfdd_stack*"]

[tool.setuptools.package-data]
openfdd_stack = ["platform/static/*"]

[tool.black]
line-length = 88
target-version = ["py314"]
extend-exclude = "openfdd_stack/platform/data_model_ttl\\.py|tools/graph_and_crud_test\\.py"

[tool.pytest.ini_options]
testpaths = ["openfdd_stack/tests"]
pythonpath = ["."]
filterwarnings = [
    "ignore::DeprecationWarning:rdflib",
    "ignore::DeprecationWarning:pyparsing",
]
